* Report on any combination of business reporting units (up to one per class)

Erik H is Erik Huelsmann
Chris T is Chris Travers
Steven M is Steven Marshall
Havard S is Havard Sorli

Changelog for 1.3 Series
Initial Release:  Monday, Oct 12 2011
Supported Presently

Changelog for 1.3.38
* Fixed AR/AP transactions resetting currency/exchange rate (Chris T)

Changelog for 1.3.37
* 1.3-1.2 downgrade now drops extensions (Chris T, 943)
* Fixed db names with spaces not supported (Chris T, 946)
* Fixed old code not working if clicked on after changing passwd (Chris 949)
* Fixed join projection issues in AP Outstanding (Chris T, 950)
* Added Apache 2.4 configuration file (Chris T)
* Fixed "save info" reporting "Draft Posted" (Chris T, 925)
* Fixed shipto causing db error on sales invoice (Chris T, 929)
* Fixed shipto including all addresses (Chris T, 929)
* Fixed shipto address not showing on invoice (Chris T, 929)
* Fixed fcgi blank screens on saving/deleting warehouse (Chris T, 902)
* Fixed blank screens after New on ar/ap transactions (Chris T, 924)
* Fixed back button handling after logout (Chris T)
* Fixed Chrome and some other browsers not properly logging out (Chris T)
* Added SQL-Ledger 2.8 migration script (Erik H)
* Removed sales/purchase order recurring logic (Chris T, 888)
* Removing references to missing line.gif (Chris T, 962)
* Fixed garbled UTF-8 characters appearing in web output (Erik H, 953)
* Removed crdate from ar/ap transactions and outstanding bug reports (Chris T)

Chris T is Chris Travers
Erik H is Erik Huelsmann

Changelog for 1.3.36
* Set default date for AP invoice creation to current date (Chris T)
* Removed "apply discount" from use overpayment screen (Chris T)
* Fixed tax checkbox problem when one tax id includes another (Chris T)
* Fixed update forgetting creditor (Nick P)
* Fixed invoices rounding and printing differently (Giovanni B)
* Deleted broken pricematrix check on existing rows in POS (Chris T)